fixed site logo alignment in MS Edge

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ Version: 1.0.3
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: treville
-Tags: two-columns, blog, news, custom-background, custom-header, custom-menu, grid-layout, entertainment, editor-style, rtl-language-support, featured-image-header, featured-images, flexible-header, custom-colors, full-width-template, sticky-post, threaded-comments, translation-ready, theme-options, one-column, left-sidebar, right-sidebar, three-columns
+Tags: two-columns, blog, news, custom-background, custom-header, custom-logo, custom-menu, grid-layout, entertainment, editor-style, rtl-language-support, featured-image-header, featured-images, flexible-header, custom-colors, full-width-template, sticky-post, threaded-comments, translation-ready, theme-options, one-column, left-sidebar, right-sidebar, three-columns
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
@@ -721,11 +721,6 @@ textarea {
 .site-title a:hover,
 .site-title a:active {
 	color: rgba(255,255,255,0.5);
-}
-
-.site-branding .custom-logo-link {
-	float: left;
-	display: block;
 }
 
 .site-branding .custom-logo {
